--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cuneiform_widths"
+name = "cuneiform_width"
 version = "0.1.0"
 authors = ["Asa Zeren <asaizeren@gmail.com>"]
 edition = "2018"
